# hangman

./: .gitignore  LICENSE  hangman.cabal
exe/: Main.hs
src/: Hangman.hs
