name:                hangman
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/RohitSingh107/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Rohit Singh
maintainer:          RohitSinghEmail@protonmail.com
copyright:           2022, Rohit Singh
category:            Open Source
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  data/dict.txt

executable hangman
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7
                     , hangman

library
  hs-source-dirs:      src
  exposed-modules:     Hangman

  build-depends:       base >= 4.7 
                     , random
                     , split

  default-language:    Haskell2010
